<resources>
    <string name="app_name">MinDaJiaXiao</string>
    <string name="sex">性别：</string>
    <string name="truename">真实姓名：</string>
    <string name="nickname">昵称：</string>
    <string name="passdword">密码：</string>
    <string name="re_password">确认密码：</string>
    <string name="E_mail">邮箱：</string>
    <string name="TEL">手机号：</string>

    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="nation">民族：</string>
    <string name="hobby">爱好：</string>
    <string name="music">音乐</string>
    <string name="art">美术</string>
    <string name="dance">舞蹈</string>
    <string name="others">其他</string>

    <string name="Home">主页</string>
    <string name="coach">找教练</string>
    <string name="practice">约车</string>
    <string name="service">服务</string>


    <string-array name="Nation">
        <item>——请选择——</item>
        <item> 汉族</item>
        <item> 壮族</item>
        <item> 满族</item>
        <item> 回族</item>
        <item> 苗族</item>
        <item> 维吾尔族</item>
        <item> 土家族</item>
        <item> 彝族</item>
        <item>蒙古族</item>
        <item> 藏族</item>
        <item>布依族</item>
        <item> 侗族</item>
        <item> 瑶族</item>
        <item>朝鲜族</item>
        <item> 白族</item>
        <item>哈尼族</item>
        <item> 哈萨克族</item>
        <item> 黎族</item>
        <item> 傣族</item>
        <item> 畲族</item>
        <item> 傈僳族</item>
        <item> 仡佬族</item>
        <item> 东乡族</item>
        <item> 高山族</item>
        <item> 拉祜族</item>
        <item> 水族</item>
        <item> 佤族</item>
        <item> 纳西族</item>
        <item> 羌族</item>
        <item> 土族</item>
        <item> 仫佬族</item>
        <item> 锡伯族</item>
        <item>柯尔克孜族</item>
        <item> 达斡尔族</item>
        <item> 景颇族</item>
        <item> 毛南族</item>
        <item> 撒拉族</item>
        <item> 塔吉克族</item>
        <item> 阿昌族</item>
        <item> 普米族</item>
        <item> 鄂温克族</item>
        <item> 怒族</item>
        <item> 京族</item>
        <item> 基诺族</item>
        <item> 德昂族</item>
        <item> 保安族</item>
        <item> 俄罗斯族</item>
        <item> 裕固族</item>
        <item> 乌兹别克族</item>
        <item> 门巴族</item>
        <item> 鄂伦春族</item>
        <item> 独龙族</item>
        <item> 塔塔尔族</item>
        <item> 赫哲族</item>
        <item> 珞巴族</item>
        <item> 布朗族</item>
    </string-array>
    <string name="title_activity_detail">detailActivity</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>


</resources>
