<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:background="@color/background_white"
                android:clipToPadding="true"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/truename"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/truename"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"/>

        <EditText
            android:hint="不允许更改"
            android:textSize="15sp"
            android:background="@null"
            android:textColorHint="@color/light_grey"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_below="@id/truename">
        <TextView
            android:text="@string/nickname"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:hint="请输入昵称"
            android:textSize="15sp"
            android:background="@null"
            android:textColorHint="@color/light_grey"
            android:inputType="textAutoComplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Passwoed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_below="@id/username">

        <TextView
            android:text="@string/passdword"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"/>

        <EditText
            android:id="@+id/et_passeord"
            android:hint="至少由八位字母数字组成"
            android:textSize="15sp"
            android:background="@null"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/RePasswoed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_below="@id/Passwoed">
        <TextView
            android:text="@string/re_password"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_repassword"
            android:hint="必须与前面输入密码一致"
            android:textSize="15sp"
            android:background="@null"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_below="@id/RePasswoed">

        <TextView
            android:text="@string/E_mail"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"/>

        <EditText
            android:hint="username@html.com"
            android:textSize="15sp"
            android:background="@null"
            android:textColorHint="@color/light_grey"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/TEL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_below="@id/Email">

        <TextView
            android:text="@string/TEL"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"/>

        <EditText
            android:hint="+86"
            android:textSize="15sp"
            android:background="@null"
            android:textColorHint="@color/light_grey"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/Nation"
        android:layout_below="@id/TEL"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/nation"
            android:paddingLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/Spinner"
            android:layout_centerInParent="true"
            android:layout_width="160dp"
            android:layout_height="wrap_content"/>

    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/sex"
        android:layout_below="@id/Nation"

        android:padding="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/sex"
            android:paddingLeft="20dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/rg_Sex"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rb_man"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man"/>
            <RadioButton
                android:id="@+id/rb_woman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman"/>
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/Habby"
        android:layout_below="@id/sex"
        android:padding="10dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/hobby"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
         <LinearLayout
             android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">


            <CheckBox
                android:text="@string/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <CheckBox
                android:text="@string/art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox"/>
             <CheckBox
                 android:text="@string/dance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/checkBox"/>
            <!--<CheckBox-->
                <!--android:text="@string/others"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"/>-->
         </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"

        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

         <Button
             android:id="@+id/btn_Back"
             android:text="返回"
             android:textColor="@color/white"
             android:background="@drawable/button_oval_left360dip"
             android:textSize="16dp"
             android:layout_width="130dp"
             android:layout_height="wrap_content"/>


          <Button
              android:id="@+id/btn_Submit"
              android:layout_toRightOf="@id/btn_Back"
              android:layout_marginLeft="2dp"
              android:text="提交"
              android:textColor="@color/white"
              android:background="@drawable/button_oval_right360dip"
              android:textSize="16dp"
              android:layout_width="130dp"
              android:layout_height="wrap_content"/>


    </RelativeLayout>


</RelativeLayout>
